@@ -1,0 +1,1 @@
+// logout routines for Konqueror go here
