@@ -18,7 +18,7 @@
 \vspace*{0.5cm}
 
 \begin{tabular}[t]{ll}
-  \textbf<?lsmb text('Employee') ?>} & <?lsmb employee ?> \\
+  \textbf{<?lsmb text('Employee') ?>} & <?lsmb employee ?> \\
   \textbf{<?lsmb text('ID') ?>} & <?lsmb employee_id ?> \\
 \end{tabular}
 \hfill
